# TimeLine

./: .env.example  .env.prod.example  .gitignore  CLAUDE.md  README.md  docker-compose.ghcr.yml  docker-compose.prod.yml  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: codeql.yml  main.yml  release-deploy.yml
backend/: .dockerignore  Dockerfile  entrypoint.prod.sh  entrypoint.sh  pyproject.toml
backend/accounts/: admin.py  authentication.py  email.py  managers.py  models.py  serializers.py  tests.py  tokens.py  views.py
backend/accounts/management/commands/: send_test_verification.py
backend/accounts/migrations/: 0001_initial.py  0002_user_avatar_user_avatar_thumb_user_bio.py  0003_user_tos_accepted_at.py  0004_emailverificationcode.py  0005_verify_existing_active_members.py  0006_passwordresetcode.py
backend/accounts/templates/accounts/email/: password_reset_code.html  password_reset_code.txt  password_reset_code_subject.txt  verification_code.html  verification_code.txt  verification_code_subject.txt
backend/api/: admin.py  emoji.py  imaging.py  models.py  notifications.py  serializers.py  tests.py  urls.py  views.py
backend/api/management/commands/: create_review_account.py  seed_demo.py  send_pushes.py
backend/api/migrations/: 0001_initial.py  0002_follow_status.py  0003_alter_post_options.py  0004_connections_and_comments.py  0005_postimage.py  0006_conversation_conversationread_message_block_and_more.py  0007_group_post_group_groupmembership.py  0008_group_messaging.py  0009_backfill_participants.py  0010_report.py  0011_reaction.py  0012_notification_notificationpreference.py  0013_post_edited_at.py  0014_postcommentread.py  0015_event_eventrsvp_poll_polloption_pollvote_and_more.py  0016_poll_decided_option.py  0017_devicepushtoken.py  0018_pushoutbox.py  0019_pushoutbox_delivered_tokens.py  0020_pushreceipt.py  _backfill.py
backend/config/: settings.py  urls.py
deploy/: Caddyfile  autodeploy.sh  backup.env.example  backup.service  backup.sh  backup.timer  cloudflare-ddns.env.example  cloudflare-ddns.service  cloudflare-ddns.sh  cloudflare-ddns.timer  deploy.sh  healthcheck.env.example  healthcheck.sh  restore.sh  send-pushes.service  send-pushes.timer  timeline-autodeploy.service  timeline-autodeploy.timer  timeline-healthcheck.service  timeline-healthcheck.timer  token-flush.service  token-flush.timer  web.Dockerfile
docs/: SHARED.md  backup-restore.md  deploy.md  design-system.md  mobile-release.md  teardown.md
docs/phases/: phase-0-docker-skeleton.md  phase-1-wireframe.md  phase-10-android-app.md  phase-10-open-source-funding.md  phase-11-aws-migration.md  phase-12-open-source-funding.md  phase-13-video-clips.md  phase-2-accounts.md  phase-3-mvp-timeline.md  phase-3a-connections-comments.md  phase-4-photos-profiles.md  phase-5-messaging.md  phase-5-productionisation.md  phase-6-groups.md  phase-6-messaging.md  phase-6a-group-messaging.md  phase-7-groups.md  phase-7-productionisation.md  phase-7b-aws-migration.md  phase-7b-emoji-reactions.md  phase-8-iphone-app.md  phase-8-notifications.md  phase-9-android-app.md  phase-9-iphone-app.md
docs/reference/: README.md  accounts.md  connections.md  events.md  feed-and-posts.md  groups.md  messaging.md  notifications.md  reactions.md
docs/superpowers/plans/: 2026-07-07-phase-6a-group-messaging.md
frontend/: Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  App.test.jsx  activity.test.jsx  api.js  api.test.js  auth.jsx  auth.test.jsx  avatar-crop.test.jsx  change-password.test.jsx  comment-counts.test.jsx  cropImage.js  emoji-picker-import.test.jsx  events.test.jsx  groups-drawer.jsx  groups.test.jsx  hooks.js  index.css  legal-safety.test.jsx  main.jsx  messaging.jsx  messaging.test.jsx  mockData.js  photos.test.jsx  post-edit-delete.test.jsx  postCache.js  postCache.test.js  postpage.test.jsx  reactions.test.jsx  reset-password.test.jsx  settings.test.jsx  test-utils.jsx  utils.js  utils.test.js
frontend/src/components/: ActivityCenter.jsx  Avatar.jsx  AvatarCropModal.jsx  BlockButton.jsx  ChangePasswordSection.jsx  CommentThread.jsx  ComposeBox.jsx  ConnectButton.jsx  DeleteAccountSection.jsx  DisconnectWarningModal.jsx  EmojiPickerPopover.jsx  FollowButton.jsx  GroupActionsMenu.jsx  GroupInvitePicker.jsx  GroupMembersPanel.jsx  GroupsDrawer.jsx  Layout.jsx  Lightbox.jsx  LoadMoreButton.jsx  MessageButton.jsx  MessagesDrawer.jsx  NavBadge.jsx  NavUserMenu.jsx  NewChatPicker.jsx  (+13 more)
frontend/test/: setup.js
mobile/: .env.example  .gitignore  app.json  eas.json  jest.config.js  jest.setup.js  package-lock.json  package.json  tsconfig.json
mobile/src/: api.ts  auth.tsx  avatarCrop.ts  eventFormat.ts  feed.ts  lists.ts  postCache.ts  preferences.tsx  push.ts  theme.ts  tokens.ts  types.ts  useDayBoundary.ts  usePushTaps.ts  utils.ts
(+130 files in other folders)
