[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "dj-rest-auth>=7.0",
    "django>=6.0.7,<6.1",
    "django-allauth>=65.0",
    "django-cors-headers>=4.9.0",
    # django-storages: the storage abstraction behind media files. Local disk
    # now (through the Phase 7 home-server beta); flipping to an S3 bucket at the
    # AWS migration (Phase 7b) is a config change, not a code change. The S3
    # backend's own dependency (boto3) is only pulled in then.
    "django-storages>=1.14",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.3",
    # gunicorn: the production WSGI app server (replaces Django's dev `runserver`
    # in the Phase 7 prod stack). Dev still uses runserver via entrypoint.sh.
    "gunicorn>=23.0",
    # WhiteNoise: lets gunicorn serve Django's own static files (admin + DRF
    # browsable API) efficiently in production, so we don't need a separate
    # static server for them. User-uploaded media is served by Caddy, not this.
    "whitenoise>=6.7",
    # Pillow: image validation + thumbnail/downscale for post photos & avatars
    # (Phase 4). We decode every upload with it rather than trusting the
    # extension, and re-encode to strip EXIF (incl. GPS) — see api/imaging.py.
    "pillow>=11.0",
    # pillow-heif: teaches Pillow to decode HEIC/HEIF, the *default* photo format
    # on iPhones. Without it every stock iPhone photo that reaches us undecoded
    # is rejected as "not a valid image" (issue #41) — and whether it reaches us
    # as HEIC depends on the browser and the phone's camera setting, so it shows
    # up as a maddening "some of my photos won't upload".
    #
    # It ships prebuilt manylinux/macOS wheels with libheif bundled, so the
    # backend image needs no apt packages — verified against the cp312
    # manylinux_2_28 wheels our python3.12-bookworm-slim base resolves to.
    #
    # Licensing: pillow-heif is Apache-2.0 and bundles libheif (LGPL-3.0) plus
    # HEVC codec libraries. We only ever *decode*, server-side, for a private
    # family app — the same footing as any Linux photo viewer. Worth revisiting
    # if this ever becomes a commercial distribution.
    "pillow-heif>=1.4",
    "psycopg[binary]>=3.3.4",
    "requests>=2.34.2",
]

# Dev-only tooling (linters/scanners). `uv sync` installs these by default;
# production images can skip them with `uv sync --no-dev`.
[dependency-groups]
dev = [
    "ruff>=0.15.22",
    "bandit>=1.9",
]

# Ruff — fast Python linter. We run a focused, high-signal ruleset rather than
# everything, so CI failures mean "real problem", not "cosmetic nit".
[tool.ruff]
# Auto-generated migrations aren't ours to lint.
extend-exclude = ["**/migrations/**"]

[tool.ruff.lint]
#   E/F  — pyflakes + pycodestyle errors (undefined names, unused imports, …)
#   I    — import sorting
#   B    — flake8-bugbear: likely bugs (mutable defaults, raise-without-from, …)
#   UP   — pyupgrade: keep syntax modern for our Python floor
select = ["E", "F", "I", "B", "UP"]
# E501 (line-too-long) is the one purely-cosmetic rule; the codebase favours
# long, explanatory strings, so we don't gate on it.
ignore = ["E501"]

# Bandit — security-focused static analysis (hardcoded secrets, unsafe subprocess
# / eval / yaml.load, etc.). Runs over our source packages only.
[tool.bandit]
# Test files use bare asserts (B101) legitimately; skip them here.
exclude_dirs = ["tests"]
skips = ["B101"]
